tests/baselines/reference/constEnumMergingWithValues4.errors.txt
m1.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
m1.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== m1.ts (2 errors) ====
    module foo {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        const enum E { X }
    }
    
    module foo {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var x = 1;
    }
    
    
    export = foo